--- a/HTML-PC/home.html
+++ b/HTML-PC/home.html
@@ -284,10 +284,10 @@
 </section>
 
 <section class="section-home-2 clearfix mb80">
-    <div class="container-left">
+    <div class="container">
         <div class="row">
             <div class="col-md-6 mb30">
-                <img src="images/graphics/img-about.png" alt="">
+                <img class="w-100" src="images/graphics/img-about.png" alt="">
             </div>
             <div class="col-md-6 aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
                 <h2 class="title-cate">Nền tảng thương mại điện tử tuyển dụng hàng đầu Việt Nam</h2>
